<resources>
    <string name="app_name">Book Manager</string>
    <string name="welcome">Welcome to</string>
    <string name="nameStore">PHUONG NAM BOOK STORE</string>
    <string name="forgot"><u>Forgot your password?</u></string>
    <string name="or">or</string>
    <string name="linkedin"><u>Login with Linkedin</u></string>
    <string name="facebook"><u>Login with Facebook</u></string>
    <string name="dangky"><u>Do not have an account?</u></string>
    <string name="title"><u>Title</u></string>
    <string name="content">Born là một bí ẩn trong văn học mạng, người ta chỉ biết đến cô qua khối lượng tác phẩm khá lớn đã được in thành sách.</string>
    <string name="notify_wrong_username_password">Wrong Username or Password. Please tell me why!!!</string>


    <!--List User Act-->

    <string name="title_activity_list_user">List User</string>
    <string name="tv_no_user">No User!!!!</string>
    <string name="tv_add_user">Add User</string>


    <!--Add User Act-->
    <string name="title_activity_add_user">Add User</string>
    <string name="title_add_invoice">Create Invoice</string>


</resources>
